# arm-module-ur5e

./: CMakeLists.txt  README.md  calculator.py  generated_from_ur_gazebo_pillar_camera.urdf  get_urdf.sh  package.xml  robotdesc  robotdesc2  ros_entrypoint.sh  run_image.ps1  run_image.sh
arm_module_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
arm_module_gazebo/launch/: arm_module_perception_rviz.launch  arm_module_ur5e_bringup.launch  depth_processing.launch  test_realsense.launch  ur5e_base_camera.launch
arm_module_gazebo/launch/inc/: load_ur5e_pillar_camera.launch.xml  load_ur_pillar_camera.launch.xml  ur_control.launch.xml
arm_module_gazebo/rviz/: arm_module_full.rviz  test_realsense.rviz
arm_module_gazebo/urdf/: realsense_only.xacro  ur_gazebo_pillar_camera.xacro  ur_gazebo_pillar_realsense.xacro  ur_gazebo_pillar_realsense_default_args.xacro
arm_module_gazebo/urdf/inc/: random_camera_gazebo_macro.xacro  realsense_camera_gazebo_macro.xacro  unused_ur_gazebo_pillar_camera_macro.xacro
arm_module_gazebo/worlds/: apple_trellis.world  realsense_chair.world
arm_module_ur5e/: CMakeLists.txt  package.xml
arm_module_ur5e_controller/: CMakeLists.txt  package.xml
arm_module_ur5e_controller/cfg/: arm_module_controller_config.yaml  config.py  list_poses_arm_demo_trellis_rpy.json  near_q_list_deg.yaml  near_q_list_rad.yaml  near_q_list_real_deg.yaml  near_q_list_real_rad.yaml  near_q_list_sim_deg.yaml  near_q_list_sim_deg_pose.yaml  near_q_list_sim_rad.yaml  robot_controller_config.yaml  view_robot.rviz
arm_module_ur5e_controller/python/scripts/: fake_pose_service.py  move_robot_client.py  query_current_pose.py  run_robot_controller.py
arm_module_ur5e_controller/python/src/: UR5e.py  collision_manager.py  gripper.py  utility.py
arm_module_ur5e_description/: CHANGELOG.rst  CMakeLists.txt  package.xml  ur5e.xacro
arm_module_ur5e_description/config/ur10/: visual_parameters.yaml
arm_module_ur5e_description/config/ur10e/: visual_parameters.yaml
arm_module_ur5e_description/config/ur16e/: visual_parameters.yaml
arm_module_ur5e_description/config/ur20/: visual_parameters.yaml
arm_module_ur5e_description/config/ur3/: visual_parameters.yaml
arm_module_ur5e_description/config/ur30/: visual_parameters.yaml
arm_module_ur5e_description/config/ur3e/: visual_parameters.yaml
arm_module_ur5e_description/config/ur5/: visual_parameters.yaml
arm_module_ur5e_description/config/ur5e/: visual_parameters.yaml
arm_module_ur5e_description/launch/: view_d435_model.launch
arm_module_ur5e_description/meshes/: d435_mount.stl
arm_module_ur5e_description/models/apple_trellis/: Map__1571733184_0000.tga  Map__19_0000.tga  Map__2138387218_0000.tga  Map__2138387225_0000.tga  Map__2138625837_0000.tga  Map__2138625837_0001.tga  Map__2138625838_0000.tga  Map__2138625839_0000.tga  Map__2138625840_0000.tga  Map__71_0000.tga  Mix_0000.tga  Mix_0001.tga  apples.blend  apples.blend1  apples.fbx  apples_trellis_main.mtl  masonry__diffuse__0000.tga  model.config  model.sdf
arm_module_ur5e_description/rviz/: apple_picking_demo.rviz  urdf.rviz
arm_module_ur5e_description/urdf/: arm_module_pillar_camera_macro.xacro  unused_ur_pillar.xacro
arm_module_ur5e_description/urdf/inc/: _d435.urdf.xacro  camera_mesh  pillar_macro.xacro  realsense_camera_marco.xacro  ur5e_macro.xacro
arm_module_ur5e_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
arm_module_ur5e_moveit_config/config/: ur5e.srdf
arm_module_ur5e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5e_moveit_controller_manager.launch.xml  warehouse.launch
arm_module_ur5e_moveit_config/tests/: moveit_planning_execution.xml
cfg/: list_poses.json  list_poses2.json
cpp/src/: hello_moveit.cpp
docker/: Dockerfile
launch/: bringup.launch  load_ur_pillar.launch  view_ur_pillar.launch
python/scripts/: main.py  move_robot_client.py  reach_waypoints.py  robot_controller.py  run_robot_controller.py  ur3e_control_node.py  ur5e_control_node.py
python/src/: UR5e.py  collision_manager.py  utility.py
srv/: PoseService.srv
urdf/: ur_pillar.xacro
wiki/: arm_module_controller_readme.md  extrinsic_calibration.md  launch_files_instructions.md  launching.md  mvps_integration.md  resource.md  setup.md
