<?xml version="1.0"?>
<package format="2">
  <name>simple_ur5_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="quanvu0604@gmail.com">quanvu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
