<?xml version="1.0"?>
<package format="2">
  <name>arm_module_ur5e</name>
  <version>0.0.1</version>
  <description>The arm_module_ur5e metapackage</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>arm_module_gazebo</exec_depend>
  <exec_depend>arm_module_ur5e_controller</exec_depend>
  <exec_depend>arm_module_ur5e_description</exec_depend>
  <exec_depend>arm_module_ur5e_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
